--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Pod-Weaver-Role-DumpPerinciCmdLineScript
 
-0.01    2014-12-21 (PERLANCAR) (unreleased)
+0.01    2014-12-21 (PERLANCAR)
 
         - First release.
