--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Pod-Weaver-Role-DumpPerinciCmdLineScript
 
+0.06    2016-05-20 (PERLANCAR)
+
+	- [Bugfix] Use encoded_content() instead of content().
+
+
 0.05    2016-01-10 (PERLANCAR)
 
 	- [Bugfix] Use Data::Dmp to log result dump instead of passing
